# pointless

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
pointless/: __init__.py
pointless/core/: __init__.py  config.py  estimate.py  models.py
pointless/core/connectors/: __init__.py  mcp_atlassian.py  mcp_github.py
pointless/core/estimators/: __init__.py  heuristic.py
pointless/interfaces/: __init__.py  api.py  cli.py
tests/: conftest.py  test_api.py  test_estimate.py  test_github_integration.py  test_mcp_integration.py  test_models.py
