[tool.poetry]
name = "pointless"
version = "0.1.0"
description = "Pointless is the AI buddy that reads your Jira tickets and codebase, then pretends it knows how long it'll take - just like your team, but faster"
authors = ["Pointless Team"]
readme = "README.md"
packages = [{include = "pointless"}]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.5.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
httpx = "^0.25.0"

[tool.poetry.scripts]
pointless = "pointless.interfaces.cli:app"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
